welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var Nbbiscuitpasse:Int=0
while (!sortitrouvee())
do {
	avance();
	if (estSurBiscuit()) {
		Nbbiscuitpasse=Nbbiscuitpasse+1
	}
} while (!croisement)
